--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+/**
+ * This file is used by PostCSS to generate our CSS file. It includes Tailwind
+ * and the typeface used in all examples, Inter.
+ */
+
 @import "~@fontsource/inter/400.css";
 @import "~@fontsource/inter/600.css";
 @import "~@fontsource/inter/700.css";
